@@ -1,4 +1,4 @@
-MANIFEST for cm_tools, version t19950128
+MANIFEST for cm_tools, version t19950513
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for CM_TOOLS
